# bird-site

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
bird/: __init__.py  db.py  gamejolt.py  leaderboards.py  levels.py  optimise-backgrounds.sh  queries.py  routes.py  wsgi.py
bird/static/: style.less
bird/templates/: base.html  decorations.html  hubs.html  level_leaderboard.html  macros.html  rankings.html  recent_top_10.html  user_profile.html
