[tool.poetry]
name = "bird-site"
version = "1.0.0"
description = "The King's Bird Leaderboards"
authors = ["Alex Morson <alexmorson@btinternet.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
gunicorn = "^21.2.0"
pydantic = "^2.5.3"
aiosqlite = "^0.19.0"
aiohttp = "^3.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
